work of 11 march

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/owl.carousel.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/flaticon.css">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet"  href="css/style.css"
     </head>
@@ -138,7 +139,7 @@
                 <div class="single-slider slider-bg-1">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-6">
                                 <div class="slider-content">
                                     <div class="slider-title">
                                         <h2>Home improvements <br>and remodeling</h2>
@@ -155,7 +156,7 @@
                 <div class="single-slider slider-bg-2">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-6">
                                 <div class="slider-content">
                                     <div class="slider-title">
                                         <h2>your most affordabel <br>contrators</h2>
@@ -172,10 +173,10 @@
                 <div class="single-slider slider-bg-3">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-6">
                                 <div class="slider-content">
                                     <div class="slider-title">
-                                        <h2>professional training <br>and painting services</h2>
+                                        <h2>professional tiling <br>and painting services</h2>
                                     </div>
                                     <div class="slider-text">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur perferendis placeat rem possimus accusantium voluptatibus non tempore corrupti aperiam eum.</p>
@@ -205,12 +206,12 @@
                 </div>
             </section>
 
-            <section class="service">
+            <section class="service py-80">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 offset-lg-1 text-center">
                             <h1 class="section-title">our services</h1>
-                            <p>With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
+                            <p class="sec-short-discription">With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
                         </div>
                     </div>
                     <div class="row service-list">
@@ -242,13 +243,212 @@
                             </div>
                         </div>
 
-                        <a href="#" class="round-btn">view all service</a>
+                        <a href="#" class="round-btn service-btn">view all service</a>
                     </div>
                 </div>
             </section>
 
+            <section class="our-project py-80">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-8 offset-lg-2 text-center">
+                            <h1 class="section-title">our project</h1>
+                            <p class="sec-short-discription">Here are a few of many projects we have completed for our customers. We provide a professional servicewhich includes consultation, free estimate, design, supply of materials and installation.</p>
+                        </div> 
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <div class="project-details">
+                                <img src="img/project/project-1.jpg" alt="">
+                                <div class="hover-content">
+                                    <p>painting</p>
+                                    <a href="#" class="round-btn project-btn">view project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="project-details">
+                                <img src="img/project/project-2.jpg" alt="">
+                                <div class="hover-content">
+                                    <p>painting</p>
+                                    <a href="#" class="round-btn project-btn">view project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="project-details">
+                                <img src="img/project/project-3.jpg" alt="">
+                                <div class="hover-content">
+                                    <p>painting</p>
+                                    <a href="#" class="round-btn project-btn">view project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="project-details">
+                                <img src="img/project/project-4.jpg" alt="">
+                                <div class="hover-content">
+                                    <p>painting</p>
+                                    <a href="#" class="round-btn project-btn">view project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row project-explore">
+                        <div class="col-lg-8 offset-lg-2 text-center py-3">
+                            <h3>
+                                <span>expolore out projects</span>
+                                <a href="#" class="round-btn">view all projects</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about py-80">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 offset-lg-1 text-center">
+                            <h1 class="section-title">about us</h1>
+                            <p class="sec-short-discription">With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="about-sing-pic">
+                                <img src="img/single-img.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="our-feature">
+                                <div class="single-feature">
+                                    <h4>OVER 15 YEARS EXPERIENCE</h4>
+                                    <p>We combine quality workmanship, superior knowledge and low prices to provide you with service unmatched by our competitors.</p>
+                                </div>
+                                <div class="single-feature">
+                                    <h4>best materials</h4>
+                                    <p>We have the experience, personel and resources to make the project run smoothly. We can ensure a job is done on time.</p>
+                                </div>
+                                <div class="single-feature">
+                                    <h4>professional standards</h4>
+                                    <p>Work with us involve a carefully planned series of steps, centered around a schedule we stick to and daily communication.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
+            <section class="our-amenities py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <!-- Nav tabs -->
+                            <ul class="nav nav-tabs we_offer justify-content-center">
+                                <li><a href="#offer_1" data-toggle="tab" class="active"><i class="fas fa-gift"></i> <br>we offer</a></li>
+                                <li><a href="#offer_2" data-toggle="tab"><i class="fas fa-check-square"></i> <br>we guarantee</a></li>
+                                <li><a href="#offer_3" data-toggle="tab"><i class="fas fa-car"></i> <br>we provide</a></li>
 
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane fade in active" id="offer_1">
+                                    <h3 class="service-title">our offer</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt totam corporis laboriosam, aperiam harum repellendus nam in labore deleniti, quidem, officia illo magni vel! Autem error perferendis assumenda voluptas!</p>
+                                </div>
+                                <div class="tab-pane fade" id="offer_2">
+                                    <h3 class="service-title">OUR WARRANTY COVERS</h3>
+                                    <p>Paetos dignissim at cursus elefeind norma arcu. Pellentesque accumsan est in tempus etos ullamcorper, sem quam suscipit lacus maecenas tortor. Erates vitae node metus. Suspendisse gravida ornare non mattis velit rutrum modest. Morbi suspendisse a tortor velim pellentesque uter justo magna gravida.</p>
+                                </div>
+                                <div class="tab-pane fade" id="offer_3">
+                                    <h3 class="service-title">OUR SERVICES</h3>
+                                    <p>Paetos dignissim at cursus elefeind norma arcu. Pellentesque accumsan est Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, fugiat itaque est voluptates veritatis deleniti? tortor velim pellentesque uter justo magna gravida.</p>
+                                </div>
+
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="choose-option py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 offset-lg-1 text-center">
+                            <h1 class="section-title">why choose renovate</h1>
+                            <p class="sec-short-discription">With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-lg-4">
+                            <div class="single-choose-opt">
+                                <div class="choose-icon">
+                                    <i class="fab fa-simplybuilt"></i>
+                                </div>
+                                <h3 class="service-title">interior renovation</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="single-choose-opt">
+                                <div class="choose-icon">
+                                    <i class="fab fa-pagelines"></i>
+                                </div>
+                                <h3 class="service-title">interior renovation</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="single-choose-opt">
+                                <div class="choose-icon">
+                                    <i class="far fa-list-alt"></i>
+                                </div>
+                                <h3 class="service-title">interior renovation</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="testimonial py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="testimonial-items owl-carousel">
+                                <div class="single-testimonial-item">
+                                    <div class="choose-icon">
+                                        <i class="far fa-comments"></i>
+                                    </div>
+                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
+                                    <div class="testimonial-author">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <span class="designation">ceo fo port company</span>
+                                    </div>
+                                </div>
+                                <div class="single-testimonial-item">
+                                    <div class="choose-icon">
+                                        <i class="far fa-comments"></i>
+                                    </div>
+                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
+                                    <div class="testimonial-author">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <span class="designation">ceo fo port company</span>
+                                    </div>
+                                </div>
+                                <div class="single-testimonial-item">
+                                    <div class="choose-icon">
+                                        <i class="far fa-comments"></i>
+                                    </div>
+                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
+                                    <div class="testimonial-author">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <span class="designation">ceo fo port company</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
     
