--- a/index-2.html
+++ b/index-2.html
@@ -537,7 +537,7 @@
                     </div>
                 </div>
             </section>
-            <section class="team">
+            <section class="team py-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 offset-lg-1 text-center">
@@ -546,7 +546,7 @@
                         </div>
                     </div>
 
-                    <div class="row team-members">
+                    <div class="row team-members py-5">
                         <div class="col-lg-4">
                             <div class="member-prfl">
                                 <div class="member-pic">
@@ -565,259 +565,48 @@
                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit ipsam incidunt laudantium esse.</p>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </section>
-            <section class="our-project py-80">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-8 offset-lg-2 text-center">
-                            <h1 class="section-title">our project</h1>
-                            <p class="sec-short-discription">Here are a few of many projects we have completed for our customers. We provide a professional servicewhich includes consultation, free estimate, design, supply of materials and installation.</p>
-                        </div> 
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-3 col-sm-6">
-                            <div class="project-details">
-                                <img src="img/project/project-1.jpg" alt="">
-                                <div class="hover-content">
-                                    <p>painting</p>
-                                    <a href="#" class="round-btn project-btn">view project</a>
+                        <div class="col-lg-4">
+                            <div class="member-prfl">
+                                <div class="member-pic">
+                                    <a href="#">
+                                        <img src="img/team/team_02.png" alt="" class="img-fluid">
+                                    </a>
+                                    <div class="member-info">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                                    </div>
                                 </div>
+                                <h3 class="member-name service-title">Mark whilberg
+                                    <span class="designation">co-founder</span>
+                                </h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit ipsam incidunt laudantium esse.</p>
                             </div>
                         </div>
-                        <div class="col-6 col-md-3  col-sm-6">
-                            <div class="project-details">
-                                <img src="img/project/project-2.jpg" alt="">
-                                <div class="hover-content">
-                                    <p>painting</p>
-                                    <a href="#" class="round-btn project-btn">view project</a>
+                        <div class="col-lg-4">
+                            <div class="member-prfl">
+                                <div class="member-pic">
+                                    <a href="#">
+                                        <img src="img/team/team_03.png" alt="" class="img-fluid">
+                                    </a>
+                                    <div class="member-info">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3  col-sm-6">
-                            <div class="project-details">
-                                <img src="img/project/project-3.jpg" alt="">
-                                <div class="hover-content">
-                                    <p>painting</p>
-                                    <a href="#" class="round-btn project-btn">view project</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3  col-sm-6">
-                            <div class="project-details">
-                                <img class="img-thumbnail" src="img/project/project-4.jpg" alt="">
-                                <div class="hover-content">
-                                    <p>painting</p>
-                                    <a href="#" class="round-btn project-btn">view project</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row project-explore">
-                        <div class="col-lg-8 offset-lg-2 text-center py-3">
-                            <h3>
-                                <span>expolore out projects</span>
-                                <a href="#" class="round-btn">view all projects</a>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="about py-80">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 offset-lg-1 text-center">
-                            <h1 class="section-title">about us</h1>
-                            <p class="sec-short-discription">With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-12">
-                            <div class="about-sing-pic">
-                                <img src="img/single-img.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-12">
-                            <div class="our-feature">
-                                <div class="single-feature">
-                                    <h4>OVER 15 YEARS EXPERIENCE</h4>
-                                    <p>We combine quality workmanship, superior knowledge and low prices to provide you with service unmatched by our competitors.</p>
-                                </div>
-                                <div class="single-feature">
-                                    <h4>best materials</h4>
-                                    <p>We have the experience, personel and resources to make the project run smoothly. We can ensure a job is done on time.</p>
-                                </div>
-                                <div class="single-feature">
-                                    <h4>professional standards</h4>
-                                    <p>Work with us involve a carefully planned series of steps, centered around a schedule we stick to and daily communication.</p>
-                                </div>
+                                <h3 class="member-name service-title">Mark whilberg
+                                    <span class="designation">co-founder</span>
+                                </h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit ipsam incidunt laudantium esse.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section class="our-amenities py-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <!-- Nav tabs -->
-                            <ul class="nav nav-tabs we_offer justify-content-center">
-                                <li><a href="#offer_1" data-toggle="tab" class="active"><i class="fas fa-gift"></i> <br>we offer</a></li>
-                                <li><a href="#offer_2" data-toggle="tab"><i class="fas fa-check-square"></i> <br>we guarantee</a></li>
-                                <li><a href="#offer_3" data-toggle="tab"><i class="fas fa-car"></i> <br>we provide</a></li>
 
-                            </ul>
-                            <div class="tab-content">
-                                <div class="tab-pane fade in active" id="offer_1">
-                                    <h3 class="service-title">our offer</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt totam corporis laboriosam, aperiam harum repellendus nam in labore deleniti, quidem, officia illo magni vel! Autem error perferendis assumenda voluptas!</p>
-                                </div>
-                                <div class="tab-pane fade" id="offer_2">
-                                    <h3 class="service-title">OUR WARRANTY COVERS</h3>
-                                    <p>Paetos dignissim at cursus elefeind norma arcu. Pellentesque accumsan est in tempus etos ullamcorper, sem quam suscipit lacus maecenas tortor. Erates vitae node metus. Suspendisse gravida ornare non mattis velit rutrum modest. Morbi suspendisse a tortor velim pellentesque uter justo magna gravida.</p>
-                                </div>
-                                <div class="tab-pane fade" id="offer_3">
-                                    <h3 class="service-title">OUR SERVICES</h3>
-                                    <p>Paetos dignissim at cursus elefeind norma arcu. Pellentesque accumsan est Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, fugiat itaque est voluptates veritatis deleniti? tortor velim pellentesque uter justo magna gravida.</p>
-                                </div>
 
-                              </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="choose-option py-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 offset-lg-1 text-center">
-                            <h1 class="section-title">why choose renovate</h1>
-                            <p class="sec-short-discription">With over 15 years experience and real focus on customer satisfaction, you can rely on us for your next renovation,driveway sett or home repair. We provide a professional service for private and commercial customers.</p>
-                        </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-md-4">
-                            <div class="single-choose-opt">
-                                <div class="choose-icon">
-                                    <i class="fab fa-simplybuilt"></i>
-                                </div>
-                                <h3 class="service-title">interior renovation</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="single-choose-opt">
-                                <div class="choose-icon">
-                                    <i class="fab fa-pagelines"></i>
-                                </div>
-                                <h3 class="service-title">interior renovation</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="single-choose-opt">
-                                <div class="choose-icon">
-                                    <i class="far fa-list-alt"></i>
-                                </div>
-                                <h3 class="service-title">interior renovation</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos reiciendis  recusandae voluptatibus!</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="testimonial py-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="testimonial-items owl-carousel">
-                                <div class="single-testimonial-item">
-                                    <div class="choose-icon">
-                                        <i class="far fa-comments"></i>
-                                    </div>
-                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
-                                    <div class="testimonial-author">
-                                        <h4>Lorem, ipsum.</h4>
-                                        <span class="designation">ceo fo port company</span>
-                                    </div>
-                                </div>
-                                <div class="single-testimonial-item">
-                                    <div class="choose-icon">
-                                        <i class="far fa-comments"></i>
-                                    </div>
-                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
-                                    <div class="testimonial-author">
-                                        <h4>Lorem, ipsum.</h4>
-                                        <span class="designation">ceo fo port company</span>
-                                    </div>
-                                </div>
-                                <div class="single-testimonial-item">
-                                    <div class="choose-icon">
-                                        <i class="far fa-comments"></i>
-                                    </div>
-                                    <p><qoute>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis sint soluta facilis, odio minima eveniet enim, vero qui ipsam rem harum iste adipisci culpa.</qoute></p>
-                                    <div class="testimonial-author">
-                                        <h4>Lorem, ipsum.</h4>
-                                        <span class="designation">ceo fo port company</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="brand-partner py-5">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 offset-lg-1 text-center">
-                            <h1 class="section-title">we work with</h1>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="brand-names owl-carousel">
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_01.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_02.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_03.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_04.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_05.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_06.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_02.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_03.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_04.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_05.png" alt="Brand Images">
-                                </div>
-                                <div class="single-brand">
-                                    <img src="img/brand/logo_06.png" alt="Brand Images">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
             <section class="action-call py-4">
                 <div class="container">
                     <div class="row">
